crates/cribo/tests/snapshots/ruff_lint_results@module_alias_namespace_escape.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_alias_namespace_escape/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
