crates/cribo/tests/snapshots/ruff_lint_results@module_setattr_with_circular_deps.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_setattr_with_circular_deps/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
