crates/cribo/tests/snapshots/ruff_lint_results@module_side_effects_circular_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_side_effects_circular_order/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
