crates/cribo/tests/snapshots/ruff_lint_results@multiline_strings.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/multiline_strings/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
