crates/cribo/tests/snapshots/ruff_lint_results@no_ops_multimodule_mixed.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/no_ops_multimodule_mixed/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 7: unused-import - `threading` imported but unused",
    ],
    total_violations: 1,
}
